syntax = "proto3";

package RandoProto;

message Packet {
  int32 id = 1;
  bytes packet = 2;
}

message BingoGoal {
  string text = 1;
  bool completed = 2;
}

message UserInfo {
  string id = 1;
  string name = 2;
  optional string avatarId = 3;
}

message TeamInfo {
  int64 id = 1;
  string name = 2;
  repeated UserInfo members = 3;
}

message GameInfo {
  int64 id = 1;
  repeated TeamInfo teams = 2;
  bool hasBingoBoard = 3;
}

message BingoSquare {
  string text = 1;
  repeated TeamInfo completedBy = 2;
  repeated BingoGoal goals = 3;
}

message RequestUpdatesMessage {
  string playerId = 1;
}

message BingoTeamInfo {
  int64 teamId = 1;
  string score = 3;
  int32 rank = 4;
  int32 squares = 5;
  int32 lines = 6;
}

message SyncBingoPlayersMessage {
  repeated BingoTeamInfo players = 1;
}

message Position {
  int32 x = 1;
  int32 y = 2;
}

message PositionedBingoSquare {
  Position position = 1;
  BingoSquare square = 2;
}

message BingoBoard {
  repeated PositionedBingoSquare squares = 1;
  int32 size = 2;
}

message SyncBoardMessage {
  BingoBoard board = 1;
  bool replace = 2;
}
